# beekeeper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: resources.qrc
src/: main.cpp
src/core/: HailoInference.cpp  HailoInference.h  SwarmManager.cpp  SwarmManager.h
src/gui/: MainWindow.cpp  MainWindow.h  MapView.qml
src/utils/: Logger.cpp  Logger.h
tests/: sitl_test.sh
